# ControlAndSimAlgorithms

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  recomp.sh  setup.py
src/: main.cpp  solvers.cpp  solvers.h  systems.cpp  systems.h  todos.md
